--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
+# Top-level CMakeLists.txt file for the Casu Beaglebone firmware
 cmake_minimum_required(VERSION 2.8)
 project(casu_beaglebone)
 
-#add_subdirectory(serial)
 add_subdirectory(beaglebone2pic)
-#add_subdirectory(i2c)
-#add_subdirectory(ehm)
