Changes to make build 'cleanly', i.e. without copying platform-specific files to compiler directories.

--- a/beaglebone2pic/CMakeLists.txt
+++ b/beaglebone2pic/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Beaglebone 2 pic CMake script
 
-#set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
+find_path(ZeroMQ_INCLUDE_DIR zmq.hpp)
 find_library(ZeroMQ_LIBRARY zmq)
 find_library(Boost_LIBRARIES boost_thread)
+find_library(PROTOBUF_LIBRARY protobuf)
 
 #find_package(Boost COMPONENTS thread REQUIRED)
 find_package(Protobuf REQUIRED)
@@ -21,7 +22,8 @@ include_directories(${CMAKE_SOURCE_DIR}/serial
                     ${CMAKE_SOURCE_DIR}/i2c
                     ${CMAKE_SOURCE_DIR}/ehm
                     ${CMAKE_BINARY_DIR}/beaglebone2pic # This is for protobuffer stuff!
-                    )
+                    ${ZeroMQ_INCLUDE_DIR})
+#                    ${CMAKE_FIND_ROOT_PATH}/usr/include)
 
 # Casu firmware sources
 set(casu_fw_SOURCES TestApp.cpp
@@ -32,7 +34,7 @@ set(casu_fw_SOURCES TestApp.cpp
                     ../ehm/ehm.cpp
                     ${ProtoSources})
 
-set(PROTOBUF_LIBRARY libprotobuf.so)
+#set(PROTOBUF_LIBRARY libprotobuf.so)
 
 # Set -rpath-link linker flags, to prevent weird 2nd-order-dependency linker errors that cost me a handfll of gray hair
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath-link,$ENV{CROSS_ENV_ROOT}/lib/arm-linux-gnueabihf -Wl,-rpath-link,$ENV{CROSS_ENV_ROOT}/usr/lib")
