--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Top-level CMakeLists.txt file for the Casu Beaglebone firmware
 cmake_minimum_required(VERSION 2.8)
-project(casu_beaglebone)
+project(airsense_beaglebone)
 
 add_subdirectory(beaglebone2pic)
